# Sentry-Libraries

./: .gitignore  README.md  build.gradle  settings.gradle
authentication/: build.gradle
authentication/src/main/java/: module-info.java
authentication/src/main/java/github/chorman0773/sentry/authentication/: AuthenticationException.java  Session.java  (+2 more)
core/: build.gradle
core/gradle/wrapper/: gradle-wrapper.properties
core/src/main/java/: module-info.java
core/src/main/java/github/chorman0773/sentry/: GameBasic.java  GameCrash.java  GameDescriptor.java
foreign/: build.gradle
foreign/src/main/java/: module-info.java
gradle-plugin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
launch/: build.gradle  settings.gradle
launch/gradle/wrapper/: gradle-wrapper.properties
launch/src/main/java/: module-info.java
launcher/: build.gradle
launcher-agent/: build.gradle
launcher-agent/src/main/java/: module-info.java
launcher-control/: build.gradle  settings.gradle
launcher-control/gradle/wrapper/: gradle-wrapper.properties
launcher-control/src/main/java/: module-info.java
launcher-installer/: Cargo.toml  build.gradle
launcher-installer/src/: main.rs
launcher-installer/src/internal/: linux.rs  mod.rs  windows.rs
launcher-natives/: Cargo.toml  build.gradle
launcher/src/main/java/: module-info.java
launcher/src/main/resources/: sentry.policy
launcherd/: build.gradle
launcherd/src/main/java/: module-info.java
sentry-installer/: build.gradle
test/: build.gradle
test/src/main/java/: module-info.java
text/: build.gradle
(+66 files in other folders)
