[package]
name = "launcher-installer"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

[target.'cfg(unix)'.dependencies]
nix = '0.16.1'

[target.'cfg(windows)'.dependencies]
winapi = '0.3.8'